Release EvoPilot v1.1.6
